<resources>
    <string name="group_image">Our group image</string>
    <string name="app_name">Assignment_2</string>
    <string name="button_text">Show Grade</string>
    <string name="names">names</string>
    <string name="emails">emails</string>
    <string name="output">output</string>
    <string name="inputDefault">Name</string>
    <string name="group_names_label">Group Members</string>
    <string-array name="group_members">
        <item>Javid Moghaddam</item>
        <item>Ricky Arnold</item>
        <item>William Nguyen</item>
    </string-array>
    <string-array name="emails">
        <item>mogha007@csusm.edu</item>
        <item>arnol074@csusm.edu</item>
        <item>nguye1160@csusm.edu</item>
    </string-array>
    <string name="grade_calculator_label">Grade Calculator</string>
    <string name="hint_score">Enter score</string>
    <string name="btn_show_grade">Show Grade</string>
    <string name="grade_result_format">You got a %1$s grade.</string>
    <string name="error_empty_score">Please enter a score.</string>
    <string name="error_invalid_number">Please enter a valid number.</string>
    <string name="error_out_of_range">Score must be between 0 and 100.</string>
</resources>
